[package]
name = "tui-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libgo = "0.4.0"
#liner = "0.4.4"
rand = "0.8.5"
rayon = "1.7.0"
termion = "2.0.1"

[dependencies.redox_liner]
git = "https://gitlab.redox-os.org/redox-os/liner.git"

[dependencies.extra]
git = "https://gitlab.redox-os.org/redox-os/libextra.git"

[dependencies.reversi]
version = "0.5.*"
git = "https://github.com/EGhiorzi/reversi/"
